# MicroXrce_test

Test_xrce_dds/PublishHelloWorld/: CMakeLists.txt
Test_xrce_dds/PublishHelloWorld/include/: HelloWorld.h
Test_xrce_dds/PublishHelloWorld/src/: HelloWorld.c
Test_xrce_dds/SubscribeHelloWorld/: Makefile  SubscribeHelloWorldClient  cmake_install.cmake
